# splatpack

./: LICENSE  README.md  pyproject.toml  splatpack.1
splatpack/: cli.py
splatpack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
