[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "splatpack"
version = "0.1.0"
description = "Batch export photogrammetry ready JPGs from DNG sequences using darktable-cli, then bundle for compute."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
splatpack = "splatpack.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["splatpack*"]
